--- a/app/presenter/templates/@layout.latte
+++ b/app/presenter/templates/@layout.latte
@@ -14,13 +14,21 @@
 	<link href="{$basePath}/css/bootstrap-image-gallery.css" rel="stylesheet">
 	<link rel="shortcut icon" href="{$basePath}/favicon.ico">
 	<link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css">
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 
 	{block head}{/block}
 </head>
 
 <body>
-
+    <nav class="navbar navbar-inverse navbar-static-top">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand" n:href="Homepage:">Reporty</a>
+                <a class="navbar-brand" n:href="Users:">Zakazníci</a>
+                <a class="navbar-brand" n:href="Registration:">Registrace zákazníka</a>
+            </div>
+        </div>
+    </nav>
 
 	<div n:foreach="$flashes as $flash" n:class="flash, $flash->type">{$flash->message}</div>
         <div class='container'>
