--- a/app/presenter/templates/Homepage/default.latte
+++ b/app/presenter/templates/Homepage/default.latte
@@ -1,1 +1,29 @@
 {block content}
+
+<h2>Počet uživatelů : {$usersCount}</h2>
+<h2>počet přiřazených karet : {$cardsCount}</h2>
+<h2>Top 10 zákazníků podle obratu nákupů za posledních 30 dní</h2>
+
+<div class="table-responsive">
+    <table class="table">
+        <tr>
+            <th>Jméno</th>
+            <th>Email</th>
+            <th>Telefon</th>
+            <th>Datum registrace</th>
+            <th>adresa</th>
+        </tr>
+        {foreach $users as $user}
+                <tr>
+                    <td>{$user->getJmeno()}</td>
+                    <td>{$user->getEmail()}</td>
+                    <td>{$user->getTelefon()}</td>
+                    <td>{$user->getDatumRegistrace()}</td>
+                    <td>{$user->getAdresa()->getUlice()} {$user->getAdresa()->getMesto()} {$user->getAdresa()->getCP()}
+                        {if $user->getAdresa()->getCO()=== ''}/{$user->getAdresa()->getCO()}{/if}
+                        {$user->getAdresa()->getPSC()} {$user->getAdresa()->getStat()}
+                    </td>
+                </tr>
+        {/foreach}
+    </table>
+</div>
