--- a/app/presenter/templates/Users/default.latte
+++ b/app/presenter/templates/Users/default.latte
@@ -1,1 +1,27 @@
 {block content}
+
+{control findUser}
+
+<div class="table-responsive">
+    <table class="table">
+        <tr>
+            <th>Jméno</th>
+            <th>Email</th>
+            <th>Telefon</th>
+            <th>Datum registrace</th>
+            <th>adresa</th>
+        </tr>
+        {*{foreach $users as $user}*}
+            {*<tr>*}
+                {*<td>{$user->getJmeno()}</td>*}
+                {*<td>{$user->getEmail()}</td>*}
+                {*<td>{$user->getTelefon()}</td>*}
+                {*<td>{$user->getDatumRegistrace()}</td>*}
+                {*<td>{$user->getAdresa()->getUlice()} {$user->getAdresa()->getMesto()} {$user->getAdresa()->getCP()}*}
+                    {*{if $user->getAdresa()->getCO()=== ''}/{$user->getAdresa()->getCO()}{/if}*}
+                    {*{$user->getAdresa()->getPSC()} {$user->getAdresa()->getStat()}*}
+                {*</td>*}
+            {*</tr>*}
+        {*{/foreach}*}
+    </table>
+</div>
